--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -91,7 +91,7 @@ input[type="submit"] {
     @include transition(background-color, box-shadow, color);
     @include prevent-select;
 
-    -webkit-tap-highlight-color: transparent; // sass-lint:disable-line no-vendor-prefixes
+    -webkit-tap-highlight-color: transparent;
     border-radius: var(--button-border-radius, #{$button-border-radius});
     cursor: pointer;
     display: inline-block;
