--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,12 +1,12 @@
 * {
-    -moz-osx-font-smoothing: grayscale; // sass-lint:disable-line no-vendor-prefixes
-    -webkit-font-smoothing: antialiased; // sass-lint:disable-line no-vendor-prefixes
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // sass-lint:disable-line no-vendor-prefixes
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     box-sizing: border-box;
 }
 
 html {
-    -webkit-text-size-adjust: 100%; // sass-lint:disable-line no-vendor-prefixes
+    -webkit-text-size-adjust: 100%;
 }
 
 article,
@@ -23,8 +23,8 @@ a {
 }
 
 img {
-    -webkit-user-drag: none; // sass-lint:disable-line no-vendor-prefixes
-    -webkit-user-select: none; // sass-lint:disable-line no-vendor-prefixes
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
     border: 0;
     display: inline-block;
     max-width: 100%;
@@ -59,7 +59,7 @@ button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    -webkit-appearance: button; // sass-lint:disable-line no-vendor-prefixes
+    -webkit-appearance: button;
     cursor: pointer;
 }
 
@@ -75,7 +75,7 @@ input {
 }
 
 input[type="search"] {
-    -webkit-appearance: textfield; // sass-lint:disable-line no-vendor-prefixes
+    -webkit-appearance: textfield;
     box-sizing: inherit;
 }
 
@@ -84,7 +84,7 @@ input[type="password"],
 input[type="email"],
 input[type="url"],
 textarea {
-    -webkit-appearance: none; // sass-lint:disable-line no-vendor-prefixes
+    -webkit-appearance: none;
 }
 
 pre {
